Add unit test definition #33

--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -155,3 +155,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Software_inspection&oldid=1060854286}",
     note = "[Online; accessed 2-November-2024]"
 }
+@misc{enwiki:1249792515,
+    author = "{Wikipedia contributors}",
+    title = "Unit testing --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Unit_testing&oldid=1249792515}",
+    note = "[Online; accessed 5-November-2024]"
+}
