Add 'There is No Such Thing as a Unit Test' reference #33

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -720,4 +720,32 @@ numpages = {6}
                     }},
     note = {[Accessed 04-11-2024]},
 }
+@book{beck2002test,
+  title={Test driven development: By example},
+  author={Beck, Kent},
+  year={2002},
+  publisher={Addison-Wesley Professional}
+}
+@misc{fowler2021diverse,
+    author = {Martin Fowler},
+    title = {On the Diverse And Fantastical Shapes of Testing},
+    howpublished = {\url{
+                   https://martinfowler.com/articles/2021-test-shapes.html
+                    }},
+    year = {2021},
+    month = {6},
+    day = {2},
+    note = {[Accessed 05-11-2024]},
+}
+@misc{watson2024there,
+    author = {Andrew Watson},
+    title = {There is No Such Thing as a Unit Test},
+    howpublished = {\url{
+                   https://www.awwsmm.com/blog/there-is-no-such-thing-as-a-unit-test
+                    }},
+    year = {2024},
+    month = {10},
+    day = {30},
+    note = {[Accessed 05-11-2024]},
+}
 
