Add feathers2004working #33

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -748,4 +748,10 @@ numpages = {6}
     day = {30},
     note = {[Accessed 05-11-2024]},
 }
+@book{feathers2004working,
+  title={Working effectively with legacy code},
+  author={Feathers, Michael},
+  year={2004},
+  publisher={Prentice Hall Professional}
+}
 
