Add transformation priority premise slide #33

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -754,4 +754,25 @@ numpages = {6}
   year={2004},
   publisher={Prentice Hall Professional}
 }
-
+@misc{martin2014cycles,
+    author = {Robert C. Martin},
+    title = {The Cycles of TDD},
+    howpublished = {\url{
+                   http://blog.cleancoder.com/uncle-bob/2014/12/17/TheCyclesOfTDD.html
+                    }},
+    year = {2014},
+    month = {12},
+    day = {17},
+    note = {[Accessed 06-11-2024]},
+}
+@misc{martin2013transformation,
+    author = {Robert C. Martin},
+    title = {The Transformation Priority Premise},
+    howpublished = {\url{
+                   https://blog.cleancoder.com/uncle-bob/2013/05/27/TheTransformationPriorityPremise.html
+                    }},
+    year = {2013},
+    month = {5},
+    day = {27},
+    note = {[Accessed 06-11-2024]},
+}
