Reference Acceptance test-driven development page #33

--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -162,3 +162,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Unit_testing&oldid=1249792515}",
     note = "[Online; accessed 5-November-2024]"
 }
+@misc{enwiki:1091258091,
+    author = "{Wikipedia contributors}",
+    title = "Acceptance test-driven development --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2022",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Acceptance_test-driven_development&oldid=1091258091}",
+    note = "[Online; accessed 6-November-2024]"
+}
