Add refactoring.com #33

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -776,3 +776,11 @@ numpages = {6}
     day = {27},
     note = {[Accessed 06-11-2024]},
 }
+@misc{fowler_refactoringcom,
+    author = {Martin Fowler},
+    title = {Refactoring},
+    howpublished = {\url{
+                   https://refactoring.com/
+                    }},
+    note = {[Accessed 07-11-2024]},
+}
