Add legacy code algorithm slide #33

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -784,3 +784,14 @@ numpages = {6}
                     }},
     note = {[Accessed 07-11-2024]},
 }
+@misc{amram2022taming,
+    author = {Dor Amram},
+    title = {Taming the Legacy Beast In 5 Steps — A Refactoring Algorithm},
+    howpublished = {\url{
+                   https://medium.com/similarweb-engineering/taming-the-legacy-beast-a-refactoring-algorithm-in-5-steps-f5de831c37a1
+                    }},
+    year = {2022},
+    month = {12},
+    day = {14},
+    note = {[Accessed 07-11-2024]},
+}
