Adjust legacy code part #33

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -795,3 +795,20 @@ numpages = {6}
     day = {14},
     note = {[Accessed 07-11-2024]},
 }
+@book{horstmann2007java,
+  title={Java Concepts for AP Computer Science},
+  author={Horstmann, Cay S},
+  year={2007},
+  publisher={John Wiley \& Sons, Inc.}
+}
+@misc{beal2011technical,
+    author = {Vangie Beal},
+    title = {Technical Debt},
+    howpublished = {\url{
+                   https://www.techopedia.com/definition/27913/technical-debt
+                    }},
+    year = {2011},
+    month = {11},
+    day = {21},
+    note = {[Accessed 07-11-2024]},
+}
