--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -169,3 +169,17 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Acceptance_test-driven_development&oldid=1091258091}",
     note = "[Online; accessed 6-November-2024]"
 }
+@misc{enwiki:1245199146,
+    author = "{Wikipedia contributors}",
+    title = "Spaghetti code --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Spaghetti_code&oldid=1245199146}",
+    note = "[Online; accessed 7-November-2024]"
+}
+@misc{enwiki:1253473056,
+    author = "{Wikipedia contributors}",
+    title = "Technical debt --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Technical_debt&oldid=1253473056}",
+    note = "[Online; accessed 7-November-2024]"
+}
