Add testing approaches #33

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -812,3 +812,9 @@ numpages = {6}
     day = {21},
     note = {[Accessed 07-11-2024]},
 }
+@book{bach2002lessons,
+  title={Lessons learned in software testing: a context-driven approach},
+  author={Bach, James and Pettichord, Bret and Kaner, Cem},
+  year={2002},
+  publisher={John Wiley \& Sons}
+}
