--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -183,3 +183,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Technical_debt&oldid=1253473056}",
     note = "[Online; accessed 7-November-2024]"
 }
+@misc{enwiki:1251780629,
+    author = "{Wikipedia contributors}",
+    title = "Smoke testing (software) --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Smoke_testing_(software)&oldid=1251780629}",
+    note = "[Online; accessed 8-November-2024]"
+}
