--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -818,3 +818,14 @@ numpages = {6}
   year={2002},
   publisher={John Wiley \& Sons}
 }
+@misc{prestonwerner2010readme,
+    author = {Tom Preston-Werner},
+    title = {Readme Driven Development},
+    howpublished = {\url{
+                   https://tom.preston-werner.com/2010/08/23/readme-driven-development.html
+                    }},
+    year = {2010},
+    month = {8},
+    day = {23},
+    note = {[Accessed 08-11-2024]},
+}
