Add rest double types #33

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -829,3 +829,30 @@ numpages = {6}
     day = {23},
     note = {[Accessed 08-11-2024]},
 }
+@book{meszaros2007xunit,
+  title={xUnit test patterns: Refactoring test code},
+  author={Meszaros, Gerard},
+  year={2007},
+  publisher={Pearson Education}
+}
+@misc{seemann2007unit,
+    author = {Mark Seemann},
+    title = {Unit Testing: Exploring The Continuum Of Test Doubles},
+    howpublished = {\url{
+                   https://learn.microsoft.com/en-us/archive/msdn-magazine/2007/september/unit-testing-exploring-the-continuum-of-test-doubles
+                    }},
+    year = {2007},
+    note = {[Accessed 08-11-2024]},
+}
+}
+@misc{fowler2006test,
+    author = {Martin Fowler},
+    title = {Test Double},
+    howpublished = {\url{
+                   https://martinfowler.com/bliki/TestDouble.html
+                    }},
+    year = {2006},
+    month = {1},
+    day = {17},
+    note = {[Accessed 08-11-2024]},
+}
