Add cannon2020why #36

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -844,7 +844,6 @@ numpages = {6}
     year = {2007},
     note = {[Accessed 08-11-2024]},
 }
-}
 @misc{fowler2006test,
     author = {Martin Fowler},
     title = {Test Double},
@@ -855,4 +854,15 @@ numpages = {6}
     month = {1},
     day = {17},
     note = {[Accessed 08-11-2024]},
+}
+@misc{cannon2020why,
+    author = {Brett Cannon},
+    title = {Why I don't like SemVer anymore},
+    howpublished = {\url{
+                   https://snarky.ca/why-i-dont-like-semver/
+                    }},
+    year = {2020},
+    month = {6},
+    day = {12},
+    note = {[Accessed 11-11-2024]},
 }
