--- a/lectures/07_c4.md
+++ b/lectures/07_c4.md
@@ -131,7 +131,7 @@ this chapter is based on [c4model.com](https://c4model.com/)
 
 :::::::::::: {.columns}
 ::::::::: {.column width="40%" .text-smaller}
-- s where an instance of a software system is running e.g., 
+- shows where an instance of a software system is running e.g., 
     - physical infrastructure (e.g. a physical server or device)
     - virtualised infrastructure,
     - containerised infrastructure (e.g. a Docker container),
