Add cost of interruption slides #36

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -866,3 +866,32 @@ numpages = {6}
     day = {12},
     note = {[Accessed 11-11-2024]},
 }
+@misc{to2018cost,
+    author = {Steven To},
+    title = {The Cost of Interruption for Software Developers},
+    howpublished = {\url{
+                   https://www.brightdevelopers.com/the-cost-of-interruption-for-software-developers
+                    }},
+    year = {2018},
+    month = {5},
+    day = {3},
+    note = {[Accessed 12-11-2024]},
+}
+@misc{pattison2008worker,
+    author = {Kermit Pattison},
+    title = {Worker, Interrupted: The Cost of Task Switching},
+    howpublished = {\url{
+                  https://www.fastcompany.com/944128/worker-interrupted-cost-task-switching
+                    }},
+    year = {2008},
+    month = {7},
+    day = {28},
+    note = {[Accessed 12-11-2024]},
+}
+@inproceedings{mark2008cost,
+  title={The cost of interrupted work: more speed and stress},
+  author={Mark, Gloria and Gudith, Daniela and Klocke, Ulrich},
+  booktitle={Proceedings of the SIGCHI conference on Human Factors in Computing Systems},
+  pages={107--110},
+  year={2008}
+}
