Extend devops slide #36

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -895,3 +895,14 @@ numpages = {6}
   pages={107--110},
   year={2008}
 }
+@misc{gitlab2022four,
+    author = {{GitLab}},
+    title = {4 Must-know DevOps principles},
+    howpublished = {\url{
+                  https://about.gitlab.com/blog/2022/02/11/4-must-know-devops-principles
+                    }},
+    year = {2022},
+    month = {2},
+    day = {11},
+    note = {[Accessed 14-11-2024]},
+}
