Add centralized vs distributed VCS slide #36

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -906,3 +906,13 @@ numpages = {6}
     day = {11},
     note = {[Accessed 14-11-2024]},
 }
+@misc{ernst2012version,
+    author = {Michael Ernst},
+    title = {Version control concepts and best practices},
+    howpublished = {\url{
+                  https://homes.cs.washington.edu/~mernst/advice/version-control.html
+                    }},
+    year = {2012},
+    month = {9},
+    note = {[Accessed 14-11-2024]},
+}
