--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -190,3 +190,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Smoke_testing_(software)&oldid=1251780629}",
     note = "[Online; accessed 8-November-2024]"
 }
+@misc{enwiki:1249842339,
+    author = "{Wikipedia contributors}",
+    title = "Blue–green deployment --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Blue%E2%80%93green_deployment&oldid=1249842339}",
+    note = "[Online; accessed 15-November-2024]"
+}
