Add CD definition from Martin Fowler #36

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -916,3 +916,14 @@ numpages = {6}
     month = {9},
     note = {[Accessed 14-11-2024]},
 }
+@misc{fowler2024continuous,
+    author = {Martin Fowler},
+    title = {Continuous Integration},
+    howpublished = {\url{
+                   https://martinfowler.com/articles/continuousIntegration.html
+                    }},
+    year = {2024},
+    month = {1},
+    day = {18},
+    note = {[Accessed 15-11-2024]},
+}
