--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -927,3 +927,14 @@ numpages = {6}
     day = {18},
     note = {[Accessed 15-11-2024]},
 }
+@misc{kazim2023what,
+    author = {Washija Kazim},
+    title = {What Is Software Deployment? Process and Best Practices},
+    howpublished = {\url{
+                   https://learn.g2.com/software-deployment
+                    }},
+    year = {2023},
+    month = {5},
+    day = {31},
+    note = {[Accessed 15-11-2024]},
+}
