--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -197,3 +197,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Blue%E2%80%93green_deployment&oldid=1249842339}",
     note = "[Online; accessed 15-November-2024]"
 }
+@misc{enwiki:1253226188,
+    author = "{Wikipedia contributors}",
+    title = "TeX --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=TeX&oldid=1253226188}",
+    note = "[Online; accessed 15-November-2024]"
+}
