Add slides about branching #36

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -938,3 +938,47 @@ numpages = {6}
     day = {31},
     note = {[Accessed 15-11-2024]},
 }
+@misc{driessen2010successful,
+    author = {Vincent Driessen},
+    title = {A successful Git branching model},
+    howpublished = {\url{
+                   https://nvie.com/posts/a-successful-git-branching-model
+                    }},
+    year = {2010},
+    month = {1},
+    day = {5},
+    note = {[Accessed 18-11-2024]},
+}
+@misc{judin2016succesful,
+    author = {Jussi Judin},
+    title = {A succesful Git branching model considered harmful},
+    howpublished = {\url{
+                   https://barro.github.io/2016/02/a-succesful-git-branching-model-considered-harmful
+                    }},
+    year = {2016},
+    month = {2},
+    day = {7},
+    note = {[Accessed 18-11-2024]},
+}
+@misc{shipp2019war,
+    author = {Scott Shipp},
+    title = {War of the Git Flows},
+    howpublished = {\url{
+                   https://dev.to/scottshipp/war-of-the-git-flows-3ec2
+                    }},
+    year = {2019},
+    month = {9},
+    day = {10},
+    note = {[Accessed 18-11-2024]},
+}
+@misc{mccreary2017when,
+    author = {Jason McCreary},
+    title = {When to make a Git Commit },
+    howpublished = {\url{
+                   https://dev.to/gonedark/when-to-make-a-git-commit
+                    }},
+    year = {2017},
+    month = {1},
+    day = {11},
+    note = {[Accessed 18-11-2024]},
+}
