Adjust interruption part #36

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -973,12 +973,31 @@ numpages = {6}
 }
 @misc{mccreary2017when,
     author = {Jason McCreary},
-    title = {When to make a Git Commit },
+    title = {When to make a Git Commit},
     howpublished = {\url{
                    https://dev.to/gonedark/when-to-make-a-git-commit
                     }},
     year = {2017},
     month = {1},
     day = {11},
+    note = {[Accessed 18-11-2024]},
+}
+@inproceedings{parnin2013programmer,
+  title={Programmer, interrupted},
+  author={Parnin, Chris},
+  booktitle={2013 IEEE Symposium on Visual Languages and Human Centric Computing},
+  pages={171--172},
+  year={2013},
+  organization={IEEE}
+}
+@misc{pande2021high,
+    author = {Nitin Pande},
+    title = {The high price of context switching for developers & ways to avoid it},
+    howpublished = {\url{
+                   https://pacohq.com/blog/guide/the-high-price-of-context-switching-for-developers/
+                    }},
+    year = {2021},
+    month = {4},
+    day = {23},
     note = {[Accessed 18-11-2024]},
 }
