Add increasing functionality by siftware figure GH-47

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1001,3 +1001,20 @@ numpages = {6}
     day = {23},
     note = {[Accessed 18-11-2024]},
 }
+@book{firesmith2008method,
+  title={The method framework for engineering system architectures},
+  author={Firesmith, Donald G and Capell, Peter and Falkenthal, Dietrich and Hammons, Charles B and Latimer IV, DeWitt T and Merendino, Tom},
+  year={2008},
+  publisher={Auerbach Publications}
+}
+@misc{charette2012f35,
+    author = {Robert N. Charette},
+    title = {F-35 Program Continues to Struggle with Software},
+    howpublished = {\url{
+                   https://spectrum.ieee.org/f35-program-continues-to-struggle-with-software
+                    }},
+    year = {2012},
+    month = {9},
+    day = {19},
+    note = {[Accessed 2025-08-18]},
+}
