Add software growth for cars slide GH-42

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1018,3 +1018,25 @@ numpages = {6}
     day = {19},
     note = {[Accessed 2025-08-18]},
 }
+@misc{charette2021how,
+    author = {Robert N. Charette},
+    title = {How Software Is Eating the Car},
+    howpublished = {\url{
+                   https://spectrum.ieee.org/meerkat-substation-security
+                    }},
+    year = {2021},
+    month = {6},
+    day = {7},
+    note = {[Accessed 2025-08-18]},
+}
+@misc{charette2009this,
+    author = {Robert N. Charette},
+    title = {This Car Runs on Code},
+    howpublished = {\url{
+                   https://spectrum.ieee.org/this-car-runs-on-code
+                    }},
+    year = {2009},
+    month = {2},
+    day = {1},
+    note = {[Accessed 2025-08-18]},
+}
