Adjust software growth for cars slide GH-42

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1040,3 +1040,14 @@ numpages = {6}
     day = {1},
     note = {[Accessed 2025-08-18]},
 }
+@misc{walker2023how,
+    author = {Thomas Walker},
+    title = {How Many Computers Are in a Car?},
+    howpublished = {\url{
+                   https://tradecarhub.com/car-technology/how-many-computers-are-in-a-car/
+                    }},
+    year = {2023},
+    month = {9},
+    day = {23},
+    note = {[Accessed 2025-08-18]},
+}
