Add Occam's razor to KISS slide GH-42

--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -211,3 +211,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Common_Vulnerabilities_and_Exposures&oldid=1256072917}",
     note = "[Online; accessed 17-November-2024]"
 }
+@misc{enwiki:1305790618,
+    author = "{Wikipedia contributors}",
+    title = "Occam's razor --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2025",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Occam%27s_razor&oldid=1305790618}",
+    note = "[Online; accessed 19-August-2025]"
+}
