Add references for complexity part GH-42 GH-47

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1051,3 +1051,14 @@ numpages = {6}
     day = {23},
     note = {[Accessed 2025-08-18]},
 }
+@misc{bykovski2020simple,
+    author = {Michael Bykovski},
+    title = {Simple vs. Complicated vs. Complex vs. Chaotic},
+    howpublished = {\url{
+                   https://medium.com/better-programming/simple-vs-complicated-vs-complex-vs-chaos-737b5964849d
+                    }},
+    year = {2020},
+    month = {3},
+    day = {3},
+    note = {[Accessed 2025-08-22]},
+}
