--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -218,3 +218,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Occam%27s_razor&oldid=1305790618}",
     note = "[Online; accessed 19-August-2025]"
 }
+@misc{enwiki:1300921689,
+    author = "{Wikipedia contributors}",
+    title = "Cynefin framework --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2025",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Cynefin_framework&oldid=1300921689}",
+    note = "[Online; accessed 22-August-2025]"
+}
