Add quill2024how GH-42

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1062,3 +1062,14 @@ numpages = {6}
     day = {3},
     note = {[Accessed 2025-08-22]},
 }
+@misc{quill2024how,
+    author = {Henry Quill},
+    title = {How Many Lines of Code in Windows 10?},
+    howpublished = {\url{
+                   https://techcult.com/how-many-lines-of-code-in-windows-10/
+                    }},
+    year = {2024},
+    month = {4},
+    day = {15},
+    note = {[Accessed 2025-08-25]},
+}
