Add yerukala2023what for extreme programming figure GH-47

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1079,3 +1079,14 @@ numpages = {6}
   year={2007},
   publisher={Pearson education}
 }
+@misc{yerukala2023what,
+    author = {Madhuri Yerukala},
+    title = {What is Extreme Programming - XP Practices},
+    howpublished = {\url{
+                   https://mindmajix.com/what-is-extreme-programming
+                    }},
+    year = {2023},
+    month = {4},
+    day = {3},
+    note = {[Accessed 2025-08-27]},
+}
