Add figures from the Ambler book GH-54

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1090,3 +1090,9 @@ numpages = {6}
     day = {3},
     note = {[Accessed 2025-08-27]},
 }
+@book{ambler2002agile,
+  title={Agile modeling: effective practices for extreme programming and the unified process},
+  author={Ambler, Scott},
+  year={2002},
+  publisher={John Wiley \& Sons}
+}
