Add reimplementation costs slide GH-47

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1096,3 +1096,25 @@ numpages = {6}
   year={2002},
   publisher={John Wiley \& Sons}
 }
+@misc{mcenery2020how,
+    author = {Sage McEnery},
+    title = {How much computer code has been written?},
+    howpublished = {\url{
+                   https://medium.com/modern-stack/how-much-computer-code-has-been-written-c8c03100f459
+                    }},
+    year = {2020},
+    month = {7},
+    day = {18},
+    note = {[Accessed 2025-09-16]},
+}
+@misc{linuxfoundation2008linux,
+    author = {The Linux Foundation},
+    title = {Linux Foundation Publishes Study Estimating the Value of Linux},
+    howpublished = {\url{
+                   https://www.linuxfoundation.org/press/press-release/linux-foundation-publishes-study-estimating-the-value-of-linux
+                    }},
+    year = {2008},
+    month = {10},
+    day = {22},
+    note = {[Accessed 2025-09-16]},
+}
