Update C4 figures and add Excalidraw as a tool GH-47

--- a/lectures/07_c4.md
+++ b/lectures/07_c4.md
@@ -56,12 +56,12 @@ this chapter is based on [c4model.com](https://c4model.com/)
 
 ## system context example
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/SystemContext.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/SystemContext.png){height=550}
 
 
 ## notation
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/SystemContext-key.png)
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/SystemContext-key.png)
 
 
 # Level 2: Container diagram
@@ -73,12 +73,12 @@ this chapter is based on [c4model.com](https://c4model.com/)
 
 ## container example
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/Containers.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/Containers.png){height=550}
 
 
 ## notation
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/Containers-key.png)
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/Containers-key.png)
 
 
 # Level 3: Component diagram
@@ -90,12 +90,12 @@ this chapter is based on [c4model.com](https://c4model.com/)
 
 ## component example
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/Components.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/Components.png){height=550}
 
 
 ## notation
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/Components-key.png)
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/Components-key.png)
 
 
 # Level 4: Code
@@ -107,7 +107,7 @@ this chapter is based on [c4model.com](https://c4model.com/)
 
 ## code example
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/MainframeBankingSystemFacade.png){height=500}
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/Code.png){height=500}
 
 
 # additional diagrams in C4 model
@@ -124,17 +124,17 @@ this chapter is based on [c4model.com](https://c4model.com/)
 
 ## system landscape diagram
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/SystemLandscape.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/SystemLandscape.png){width=750}
 
 
 ## dynamic diagram (collaboration style)
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/SignIn.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/Dynamic-Collaboration.png)
 
 
 ## dynamic diagram (sequence)
 
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/bigbankplc-SignIn-sequence.png){height=550}
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/Dynamic-Sequence.png)
 
 
 ## deployment diagram
@@ -150,7 +150,7 @@ this chapter is based on [c4model.com](https://c4model.com/)
 
 :::::::::
 ::::::::: {.column width="60%"}
-![from [c4model.com](https://c4model.com/) | CC-BY](figures/borrowed/c4/LiveDeployment.png)
+![from [c4model.com](https://c4model.com/) | CC-BY 4.0](figures/borrowed/c4/Deployment-Development.png)
 :::::::::
 ::::::::::::
 
@@ -168,6 +168,8 @@ this chapter is based on [c4model.com](https://c4model.com/)
 ::::::::: {.column width="70%"}
 - [Google Drawings](https://docs.google.com/drawings)
     - it does not have a person shape though, but can be constucted from a circle and a rectange
+- [Excalidraw](https://excalidraw.com/)
+    - has a [plugin](https://libraries.excalidraw.com/?target=_excalidraw&referrer=https%3A%2F%2Fexcalidraw.com%2F&useHash=true&token=t3GmI-WyZ2DeAX5-2XyOl&theme=light&version=2&sort=default#dmitry-burnyshev-c4-architecture) for drawing C4
 - Visio 
 :::::::::
 ::::::::: {.column width="30%"}
