Add fowler2018refactoring GH-47

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1118,3 +1118,9 @@ numpages = {6}
     day = {22},
     note = {[Accessed 2025-09-16]},
 }
+@book{fowler2018refactoring,
+  title={Refactoring: improving the design of existing code},
+  author={Fowler, Martin},
+  year={2018},
+  publisher={Addison-Wesley Professional}
+}
