--- a/practicals/04_c4.md
+++ b/practicals/04_c4.md
@@ -80,7 +80,22 @@ revealjs-url: "../assets/reveal.js-5.2.1/"
 :::::::::
 ::::::::::::
 
-# customer wants to add telemetry {visibility="hidden"}
+# Level 4: Code
+
+::: {.wide-quote}
+> Finally, if you really want or need to, you can zoom into an individual component to show how that component is implemented.
+>
+>  Simon Brown - [The C4 Model for Software Architecture](https://www.infoq.com/articles/C4-architecture-model/)
+
+:::
+
+::: {.mt-3}
+- this could be, for example, class diagram with UML
+- we're skipping it (also not required for the project assignment)
+:::
+
+
+# customer wants to add telemetry {visibility="uncounted" background="#ebcb8b40"}
 
 ![](../lectures/figures/telemetry_v2.drawio.svg)
 
