Add Excalidraw link for container diagram GH-63

--- a/practicals/04_c4.md
+++ b/practicals/04_c4.md
@@ -93,6 +93,8 @@ revealjs-url: "../assets/reveal.js-5.2.1/"
 :::::::::
 ::::::::::::
 
+[open in Excalidraw](https://excalidraw.com/#json=mE5CzLnnozx6w-Pjm36Pr,70ja8EODQBrBVSNrggSnAw)
+
 # Level 3: Component diagram
 
 - shows the major structural building blocks of the application (with interfaces)
