Relocate C4 figures GH-63

--- a/practicals/04_c4.md
+++ b/practicals/04_c4.md
@@ -60,7 +60,7 @@ revealjs-url: "../assets/reveal.js-5.2.1/"
 :::
 :::::::::
 ::::::::: {.column width="30%"}
-![[open in Excalidraw](https://excalidraw.com/#json=kH-voL6DzLoegPm8Xbo1B,u7q5iblpWLBuf_jyvkn-Dg)](c4/system_context.excalidraw.svg)
+![[open in Excalidraw](https://excalidraw.com/#json=kH-voL6DzLoegPm8Xbo1B,u7q5iblpWLBuf_jyvkn-Dg)](../lectures/figures/user_statistics/system_context.excalidraw.svg)
 
 :::::::::
 ::::::::::::
@@ -85,11 +85,11 @@ revealjs-url: "../assets/reveal.js-5.2.1/"
 
 :::::::::::: {.columns}
 ::::::::: {.column width="35%"}
-![](c4/container.excalidraw.svg){height=375}
+![](../lectures/figures/user_statistics/container.excalidraw.svg){height=375}
 
 :::::::::
 ::::::::: {.column width="65%" .fragment}
-![](c4/container_server_client.excalidraw.svg){height=425}
+![](../lectures/figures/user_statistics/container_server_client.excalidraw.svg){height=425}
 :::::::::
 ::::::::::::
 
