Add testing is never complete slide GH-47

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1124,3 +1124,9 @@ numpages = {6}
   year={2018},
   publisher={Addison-Wesley Professional}
 }
+@book{donovan2015go,
+  title={The Go programming language},
+  author={Donovan, Alan AA and Kernighan, Brian W},
+  year={2015},
+  publisher={Addison-Wesley Professional}
+}
