Add source for pomodoro GH-47

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -1130,3 +1130,14 @@ numpages = {6}
   year={2015},
   publisher={Addison-Wesley Professional}
 }
+@misc{ho2025pomodoro,
+    author = {Leon Ho},
+    title = {The Pomodoro Technique: What It Is & How It Boosts Productivity},
+    howpublished = {\url{
+                   https://www.lifehack.org/articles/productivity/the-pomodoro-technique-is-it-right-for-you.html
+                    }},
+    year = {2025},
+    month = {2},
+    day = {1},
+    note = {[Accessed 2025-12-02]},
+}
